# Nmap Changelog ($Id$); -*-text-*-

o New service probes and matches for Apache HBase and Hadoop MapReduce. 
  [Paulino Calderon]

o [NSE][GH#876] New script http-vuln-cve2017-5689 detects a privilege escalation 
  vulnerability (INTEL-SA-00075) in Intel Active Management Technology (AMT)
  capable systems. [Andrew Orr]

o Extended Memcached service probe and added match for Apache ZooKeeper. 
  [Paulino Calderon]

o [NSE] New script vmware-version queries VMWare SOAP API for version and
  product information. Submitted in 2011, this was mistakenly turned into a
  service probe that was unable to elicit any matches. [Aleksey Tyurin]

o [Ncat] The --no-shutdown option now also works in connect mode, not only in
  listen mode.

o [NSE] New script argument "vulns.short" will reduce vulns library script
  output to a single line containing the target name or IP, the vulnerability
  state, and the CVE ID or title of the vulnerability. [Daniel Miller]

o [NSE][GH#862] SNMP scripts will now take a community string provided like
  `--script-args creds.snmp=private`, which previously did not work because it
  was interpreted as a username. [Daniel Miller]

o [NSE] Resolved several issues in the default HTTP redirect rules:
    - [GH#826] A redirect is now cancelled if the original URL contains
      embedded credentials
    - [GH#829] A redirect test is now more careful in determining whether
      a redirect destination is related to the original host
    - [GH#830] A redirect is now more strict in avoiding possible redirect
      loops
  [nnposter]

o [NSE][GH#766] The HTTP Host header will now include the port unless it is
  the default one for a given scheme. [nnposter]

o [NSE] The HTTP response object has a new member, fragment, which contains
  a partially received body (if any) when the overall request fails to
  complete. [nnposter]

o [NSE][GH#866] NSE now allows cookies to have arbitrary attributes, which